# ImageLibraryV3

./: .gitignore  .gitmodules  CMakeLists.txt
data/: about.html  build.cmake  build.sh  contact.html  index.html  library.html  package-lock.json  package.json  tsconfig.json
data/scripts/: index.ts  library.ts
data/style/: about.css  colors.css  contact.css  index.css  library.css  style.css
include/ImageLibrary/Application/: APIEntries.hpp  HandlerFunctions.hpp
include/ImageLibrary/Importer/: DateUtils.hpp
src/: sources.cmake
src/Application/: APIEntries.cpp  CMakeLists.txt  HandlerFunctions.cpp  main.cpp
src/Importer/: CMakeLists.txt  DateUtils.cpp  main.cpp
